Scenarios fonctionnel et modification pour le Jar